fixed footer-1 overflow

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row;
   justify-content: right;
-  height: 30vh;
+  /* height: 30vh; */
   overflow: hidden;
   /* margin-bottom: 1rem; */
 }
